# model-catalog

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  agents.md  package.json  tsconfig.json
.claude/: settings.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  propose-model.yml
.github/workflows/: publish-java-client.yml  publish-js-client.yml  publish-python-client.yml  publish.yml  regen.yml
catalog/: model-catalog.json  models-catalog.json  plans.json  plans.schema.json  qa-eval.jsonl
clients/java/: README.md  pom.xml
clients/java/src/main/java/io/github/openviglet/modelcatalog/: BenchmarkScore.java  Benchmarks.java  Catalog.java  CatalogException.java  Json.java  Kind.java  Modalities.java  ModelCatalogClient.java  ModelEntry.java  Performance.java  Pricing.java
clients/java/src/main/java/io/github/openviglet/modelscatalog/: Catalog.java  (+6 more)
clients/js/: README.md  index.d.ts  index.js  index.test.mjs  package.json
clients/python/: README.md  pyproject.toml
clients/python/model_catalog_client/: __init__.py  client.py  models.py
clients/python/models_catalog_client/: __init__.py  client.py
clients/python/tests/: test_client.py
docs/: CHANGELOG.md  IMPROVEMENTS.md  ROADMAP.md  STRATEGY.md  last-task.md
docs/references/: api.md  pipeline.md
pipeline/: artificial-analysis-map.json  regen.mjs  regen.test.mjs
pipeline/adapters/: artificial-analysis.mjs  bedrock.mjs  benchmarks.mjs  huggingface.mjs  index.mjs  litellm.mjs  ollama.mjs
pipeline/lib/: merge.mjs  util.mjs
public/: index.html  plans.json  styles.css
scripts/: emit.mjs  qa-eval.mjs  qa-eval.test.mjs  query-manifest.mjs  query-manifest.test.mjs
src/page/: ask.ts  constants.ts  controls.ts  detail.ts  format.ts  main.ts  panels.ts  state.ts  table.ts  types.ts
(+2 files in other folders)
